@@ -38,7 +38,8 @@ enum mWatchpointType {
 	WATCHPOINT_WRITE = 1,
 	WATCHPOINT_READ = 2,
 	WATCHPOINT_RW = 3,
-	WATCHPOINT_WRITE_CHANGE = 4,
+	WATCHPOINT_CHANGE = 4,
+	WATCHPOINT_WRITE_CHANGE = 5,
 };
 
 enum mBreakpointType {
