@@ -57,6 +57,7 @@ Other fixes:
  - Core: Fix threading improperly setting paused state while interrupted
  - Debugger: Don't skip undefined instructions when debugger attached
  - Debugger: Close trace log when done tracing
+ - Debugger: Fix change watchpoints (fixes mgba.io/i/1947)
  - FFmpeg: Fix some small memory leaks
  - FFmpeg: Fix encoding of time base
  - GB Video: Fix SGB video logs
